# ai-converter

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: library_principles.md
docs/architecture/: compiler_and_validation.md  profiling.md  schema_contracts.md
docs/evaluation/: benchmark_protocol.md
docs/prompts/: mapping_ir.md
docs/synthetic_benchmark/: architecture.md  drift.md  generators.md
examples/: benchmark_config.json
examples/from_scratch_pipeline/: README.md  convert_record.json  run_example.py
examples/from_scratch_pipeline/drift_samples/: rename_candidate_01.json  rename_candidate_02.json
examples/from_scratch_pipeline/source_samples/: sample_01.json  sample_02.json  sample_03.json
examples/synthetic_benchmark/: README.md  run_example.py  run_multimodel_orchestrator.py
prompts/mapping_ir/: v1-system.txt  v1-user.txt
prompts/repair/: v1-system.txt  v1-user.txt
prompts/source_schema/: v1-system.txt  v1-user.txt
prompts/synthetic_benchmark_template/: README.md  v1-system.txt  v1-user.txt
prompts/synthetic_template/: README.md  v1-system.txt  v1-user.txt
src/ai_converter/: __init__.py
src/ai_converter/compiler/: __init__.py  compiler.py  module_loader.py  runtime_ops.py
src/ai_converter/drift/: classifier.py  heuristics.py  models.py  patch_apply.py
src/ai_converter/evaluation/: __init__.py  aggregation.py  benchmark.py  metrics.py  reporting.py
tasks/: codex_task_breakdown_llm_converter.md  epic_synthetic_benchmark_ai_converter_codex.md  large_task_llm_converter.md
tests/: README.md  conftest.py
(+123 files in other folders)
